...
  ["MARIA_TRINIDAD_SANCHEZ", "María Trinidad Sánchez"],
  ["MONSENOR_NOUEL", "Monseñor Nouel"],
  ["MONTE_CRISTI", "Monte Cristi"],
  ["MONTE_PLATA", "Monte Plata"],
  ["PEDERNALES", "Pedernales"],
  ["PERAVIA", "Peravia"],
  ["PUERTO_PLATA", "Puerto Plata"],
  ["SAMANA", "Samaná"],
  ["SAN_CRISTOBAL", "San Cristóbal"],
  ["SAN_JOSE_DE_OCOA", "San José de Ocoa"],
  ["SAN_JUAN", "San Juan"],
  ["SAN_PEDRO_DE_MACORIS", "San Pedro de Macorís"],
  ["SANCHEZ_RAMIREZ", "Sánchez Ramírez"],
...
